cfn_benchmark/cfn_templates/aws__sagemaker-hyperpod-cluster-setup/eks/cloudformation/private-subnet-template.yaml
Description: Private Subnet Stack
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  ResourceNamePrefix:
    Type: String
    Default: sagemaker-hyperpod-eks
    Description: Prefix to be used for all resources created by this template.
  VpcId:
    Type: String
    Default: vpc-1234567890abcdef0
    Description: The ID of the VPC you wish to use if you do not want to create a new VPC.
  VpcCidrBlock:
    Type: String
    Default: 10.192.0.0/16
    Description: The CIDR block for the VPC
  AvailabilityZoneIds:
    Type: CommaDelimitedList
    Default: use2-az2,,,,
    Description: List of AZs to deploy subnets in (up to 5)
  NatGatewayIds:
    Type: CommaDelimitedList
    Default: nat-1234567890abcdef0
    Description: List of NAT Gateway IDs to route internet bound traffic to from the newly created private subnets.
Conditions:
  IsVpcCidr101:
    Fn::Equals:
      - Ref: VpcCidrBlock
      - 10.1.0.0/16
  HasAZ1:
    Fn::Not:
      - Fn::Equals:
          - Fn::Select:
              - 0
              - Ref: AvailabilityZoneIds
          - ''
  HasAZ2:
    Fn::Not:
      - Fn::Equals:
          - Fn::Select:
              - 1
              - Ref: AvailabilityZoneIds
          - ''
  HasAZ3:
    Fn::Not:
      - Fn::Equals:
          - Fn::Select:
              - 2
              - Ref: AvailabilityZoneIds
          - ''
  HasAZ4:
    Fn::Not:
      - Fn::Equals:
          - Fn::Select:
              - 3
              - Ref: AvailabilityZoneIds
          - ''
  HasAZ5:
    Fn::Not:
      - Fn::Equals:
          - Fn::Select:
              - 4
              - Ref: AvailabilityZoneIds
          - ''
Resources:
  AdditionalCidrBlock1:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      AmazonProvidedIpv6CidrBlock: false
      CidrBlock:
        Fn::If:
          - IsVpcCidr101
          - 10.192.0.0/16
          - 10.1.0.0/16
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/AdditionalCidrBlock1
    Condition: HasAZ1
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId:
        Fn::Select:
          - 0
          - Ref: AvailabilityZoneIds
      CidrBlock:
        Fn::If:
          - IsVpcCidr101
          - 10.192.0.0/16
          - 10.1.0.0/16
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Private1
      VpcId:
        Ref: VpcId
    DependsOn:
      - AdditionalCidrBlock1
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateSubnet1
    Condition: HasAZ1
  EksPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId:
        Fn::Select:
          - 0
          - Ref: AvailabilityZoneIds
      CidrBlock:
        Fn::Join:
          - ''
          - - Fn::Select:
                - 0
                - Fn::Split:
                    - .
                    - Fn::Select:
                        - 0
                        - Fn::Split:
                            - /
                            - Ref: VpcCidrBlock
            - .
            - Fn::Select:
                - 1
                - Fn::Split:
                    - .
                    - Fn::Select:
                        - 0
                        - Fn::Split:
                            - /
                            - Ref: VpcCidrBlock
            - .16.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Eks-Private1
        - Key: kubernetes.io/role/internal-elb
          Value: '1'
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/EksPrivateSubnet1
    Condition: HasAZ1
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Private-RT-1
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateRouteTable1
    Condition: HasAZ1
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable1
      SubnetId:
        Ref: PrivateSubnet1
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateSubnet1RouteTableAssociation
    Condition: HasAZ1
  EksPrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-EKS-Private-RT-1
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/EksPrivateRouteTable1
    Condition: HasAZ1
  PrivateEksSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: EksPrivateRouteTable1
      SubnetId:
        Ref: EksPrivateSubnet1
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateEksSubnet1RouteTableAssociation
    Condition: HasAZ1
  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Fn::Select:
          - 0
          - Ref: NatGatewayIds
      RouteTableId:
        Ref: PrivateRouteTable1
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/DefaultPrivateRoute1
    Condition: HasAZ1
  AdditionalCidrBlock2:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      AmazonProvidedIpv6CidrBlock: false
      CidrBlock:
        Fn::If:
          - IsVpcCidr101
          - 10.193.0.0/16
          - 10.2.0.0/16
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/AdditionalCidrBlock2
    Condition: HasAZ2
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId:
        Fn::Select:
          - 1
          - Ref: AvailabilityZoneIds
      CidrBlock:
        Fn::If:
          - IsVpcCidr101
          - 10.193.0.0/16
          - 10.2.0.0/16
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Private2
      VpcId:
        Ref: VpcId
    DependsOn:
      - AdditionalCidrBlock2
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateSubnet2
    Condition: HasAZ2
  EksPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId:
        Fn::Select:
          - 1
          - Ref: AvailabilityZoneIds
      CidrBlock:
        Fn::Join:
          - ''
          - - Fn::Select:
                - 0
                - Fn::Split:
                    - .
                    - Fn::Select:
                        - 0
                        - Fn::Split:
                            - /
                            - Ref: VpcCidrBlock
            - .
            - Fn::Select:
                - 1
                - Fn::Split:
                    - .
                    - Fn::Select:
                        - 0
                        - Fn::Split:
                            - /
                            - Ref: VpcCidrBlock
            - .48.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Eks-Private2
        - Key: kubernetes.io/role/internal-elb
          Value: '1'
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/EksPrivateSubnet2
    Condition: HasAZ2
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Private-RT-2
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateRouteTable2
    Condition: HasAZ2
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable2
      SubnetId:
        Ref: PrivateSubnet2
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateSubnet2RouteTableAssociation
    Condition: HasAZ2
  EksPrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-EKS-Private-RT-2
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/EksPrivateRouteTable2
    Condition: HasAZ2
  PrivateEksSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: EksPrivateRouteTable2
      SubnetId:
        Ref: EksPrivateSubnet2
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateEksSubnet2RouteTableAssociation
    Condition: HasAZ2
  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Fn::Select:
          - 0
          - Ref: NatGatewayIds
      RouteTableId:
        Ref: PrivateRouteTable2
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/DefaultPrivateRoute2
    Condition: HasAZ2
  AdditionalCidrBlock3:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      AmazonProvidedIpv6CidrBlock: false
      CidrBlock:
        Fn::If:
          - IsVpcCidr101
          - 10.194.0.0/16
          - 10.3.0.0/16
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/AdditionalCidrBlock3
    Condition: HasAZ3
  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId:
        Fn::Select:
          - 2
          - Ref: AvailabilityZoneIds
      CidrBlock:
        Fn::If:
          - IsVpcCidr101
          - 10.194.0.0/16
          - 10.3.0.0/16
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Private3
      VpcId:
        Ref: VpcId
    DependsOn:
      - AdditionalCidrBlock3
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateSubnet3
    Condition: HasAZ3
  EksPrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId:
        Fn::Select:
          - 2
          - Ref: AvailabilityZoneIds
      CidrBlock:
        Fn::Join:
          - ''
          - - Fn::Select:
                - 0
                - Fn::Split:
                    - .
                    - Fn::Select:
                        - 0
                        - Fn::Split:
                            - /
                            - Ref: VpcCidrBlock
            - .
            - Fn::Select:
                - 1
                - Fn::Split:
                    - .
                    - Fn::Select:
                        - 0
                        - Fn::Split:
                            - /
                            - Ref: VpcCidrBlock
            - .80.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Eks-Private3
        - Key: kubernetes.io/role/internal-elb
          Value: '1'
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/EksPrivateSubnet3
    Condition: HasAZ3
  PrivateRouteTable3:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Private-RT-3
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateRouteTable3
    Condition: HasAZ3
  PrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable3
      SubnetId:
        Ref: PrivateSubnet3
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateSubnet3RouteTableAssociation
    Condition: HasAZ3
  EksPrivateRouteTable3:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-EKS-Private-RT-3
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/EksPrivateRouteTable3
    Condition: HasAZ3
  PrivateEksSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: EksPrivateRouteTable3
      SubnetId:
        Ref: EksPrivateSubnet3
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateEksSubnet3RouteTableAssociation
    Condition: HasAZ3
  DefaultPrivateRoute3:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Fn::Select:
          - 0
          - Ref: NatGatewayIds
      RouteTableId:
        Ref: PrivateRouteTable3
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/DefaultPrivateRoute3
    Condition: HasAZ3
  AdditionalCidrBlock4:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      AmazonProvidedIpv6CidrBlock: false
      CidrBlock:
        Fn::If:
          - IsVpcCidr101
          - 10.195.0.0/16
          - 10.4.0.0/16
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/AdditionalCidrBlock4
    Condition: HasAZ4
  PrivateSubnet4:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId:
        Fn::Select:
          - 3
          - Ref: AvailabilityZoneIds
      CidrBlock:
        Fn::If:
          - IsVpcCidr101
          - 10.195.0.0/16
          - 10.4.0.0/16
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Private4
      VpcId:
        Ref: VpcId
    DependsOn:
      - AdditionalCidrBlock4
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateSubnet4
    Condition: HasAZ4
  EksPrivateSubnet4:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId:
        Fn::Select:
          - 3
          - Ref: AvailabilityZoneIds
      CidrBlock:
        Fn::Join:
          - ''
          - - Fn::Select:
                - 0
                - Fn::Split:
                    - .
                    - Fn::Select:
                        - 0
                        - Fn::Split:
                            - /
                            - Ref: VpcCidrBlock
            - .
            - Fn::Select:
                - 1
                - Fn::Split:
                    - .
                    - Fn::Select:
                        - 0
                        - Fn::Split:
                            - /
                            - Ref: VpcCidrBlock
            - .112.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Eks-Private4
        - Key: kubernetes.io/role/internal-elb
          Value: '1'
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/EksPrivateSubnet4
    Condition: HasAZ4
  PrivateRouteTable4:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Private-RT-4
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateRouteTable4
    Condition: HasAZ4
  PrivateSubnet4RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable4
      SubnetId:
        Ref: PrivateSubnet4
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateSubnet4RouteTableAssociation
    Condition: HasAZ4
  EksPrivateRouteTable4:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-EKS-Private-RT-4
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/EksPrivateRouteTable4
    Condition: HasAZ4
  PrivateEksSubnet4RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: EksPrivateRouteTable4
      SubnetId:
        Ref: EksPrivateSubnet4
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateEksSubnet4RouteTableAssociation
    Condition: HasAZ4
  DefaultPrivateRoute4:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Fn::Select:
          - 0
          - Ref: NatGatewayIds
      RouteTableId:
        Ref: PrivateRouteTable4
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/DefaultPrivateRoute4
    Condition: HasAZ4
  AdditionalCidrBlock5:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      AmazonProvidedIpv6CidrBlock: false
      CidrBlock:
        Fn::If:
          - IsVpcCidr101
          - 10.196.0.0/16
          - 10.5.0.0/16
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/AdditionalCidrBlock5
    Condition: HasAZ5
  PrivateSubnet5:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId:
        Fn::Select:
          - 4
          - Ref: AvailabilityZoneIds
      CidrBlock:
        Fn::If:
          - IsVpcCidr101
          - 10.196.0.0/16
          - 10.5.0.0/16
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Private5
      VpcId:
        Ref: VpcId
    DependsOn:
      - AdditionalCidrBlock5
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateSubnet5
    Condition: HasAZ5
  EksPrivateSubnet5:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId:
        Fn::Select:
          - 4
          - Ref: AvailabilityZoneIds
      CidrBlock:
        Fn::Join:
          - ''
          - - Fn::Select:
                - 0
                - Fn::Split:
                    - .
                    - Fn::Select:
                        - 0
                        - Fn::Split:
                            - /
                            - Ref: VpcCidrBlock
            - .
            - Fn::Select:
                - 1
                - Fn::Split:
                    - .
                    - Fn::Select:
                        - 0
                        - Fn::Split:
                            - /
                            - Ref: VpcCidrBlock
            - .144.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Eks-Private5
        - Key: kubernetes.io/role/internal-elb
          Value: '1'
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/EksPrivateSubnet5
    Condition: HasAZ5
  PrivateRouteTable5:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-Private-RT-5
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateRouteTable5
    Condition: HasAZ5
  PrivateSubnet5RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable5
      SubnetId:
        Ref: PrivateSubnet5
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateSubnet5RouteTableAssociation
    Condition: HasAZ5
  EksPrivateRouteTable5:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: aws-sagemaker-hyperpod-prerequiste
          Value:
            Fn::Sub: ${ResourceNamePrefix}-EKS-Private-RT-5
      VpcId:
        Ref: VpcId
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/EksPrivateRouteTable5
    Condition: HasAZ5
  PrivateEksSubnet5RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: EksPrivateRouteTable5
      SubnetId:
        Ref: EksPrivateSubnet5
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/PrivateEksSubnet5RouteTableAssociation
    Condition: HasAZ5
  DefaultPrivateRoute5:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Fn::Select:
          - 0
          - Ref: NatGatewayIds
      RouteTableId:
        Ref: PrivateRouteTable5
    Metadata:
      aws:cdk:path: PrivateSubnetCfnTemplate/DefaultPrivateRoute5
    Condition: HasAZ5
Outputs:
  PrivateRouteTableIds:
    Description: Private Route Table Id
    Value:
      Fn::Join:
        - ','
        - - Fn::If:
              - HasAZ1
              - Ref: PrivateRouteTable1
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ2
              - Ref: PrivateRouteTable2
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ3
              - Ref: PrivateRouteTable3
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ4
              - Ref: PrivateRouteTable4
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ5
              - Ref: PrivateRouteTable5
              - Ref: AWS::NoValue
  PrivateSubnetIds:
    Description: Comma-delimited list of created Private Subnet IDs
    Value:
      Fn::Join:
        - ','
        - - Fn::If:
              - HasAZ1
              - Ref: PrivateSubnet1
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ2
              - Ref: PrivateSubnet2
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ3
              - Ref: PrivateSubnet3
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ4
              - Ref: PrivateSubnet4
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ5
              - Ref: PrivateSubnet5
              - Ref: AWS::NoValue
  EksPrivateRouteTableIds:
    Description: Private Eks Route Table Id
    Value:
      Fn::Join:
        - ','
        - - Fn::If:
              - HasAZ1
              - Ref: EksPrivateRouteTable1
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ2
              - Ref: EksPrivateRouteTable2
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ3
              - Ref: EksPrivateRouteTable3
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ4
              - Ref: EksPrivateRouteTable4
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ5
              - Ref: EksPrivateRouteTable5
              - Ref: AWS::NoValue
  EksPrivateSubnetIds:
    Description: Comma-delimited list of created Eks Private Subnet IDs
    Value:
      Fn::Join:
        - ','
        - - Fn::If:
              - HasAZ1
              - Ref: EksPrivateSubnet1
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ2
              - Ref: EksPrivateSubnet2
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ3
              - Ref: EksPrivateSubnet3
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ4
              - Ref: EksPrivateSubnet4
              - Ref: AWS::NoValue
          - Fn::If:
              - HasAZ5
              - Ref: EksPrivateSubnet5
              - Ref: AWS::NoValue
